<resources>
    <string name="app_name">Ass</string>
    <string name="loginActivityImageDescription">Logo</string>
    <string name="loginActivityEditTextUsernameHint">Username</string>
    <string name="loginActivityEditTextPasswordHint">Password</string>
    <string name="loginActivityButtonText">Login</string>
    <string name="radioGroupMainActivityHeader">Select an Exercise</string>
    <string name="option1">Gym Exercises</string>
    <string name="option2">Home Exercises</string>
    <string name="option3">Street Exercises</string>
    <string name="logoutButton">Log out</string>
    <string name="backMethodsAcitivty">Back</string>
    <string name="placeholderEditTextMethodsActivity">PlaceHolder</string>
    <string name="confirmButtonMainActivity">Confirm</string>
    <string name="all_done">All Done?</string>
    <string name="check_every_excercise_you_completed">Check every excercise you completed</string>
    <string name="close_app">Close App</string>
</resources>