<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="100dp"
        android:text="Hello World!"
        android:textColor="@color/textPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textColor="@color/textPrimary"
        android:text="@string/radioGroupMainActivityHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:textColor="@color/textSecondary"
            android:id="@+id/radioButtonOption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option1" />

        <RadioButton

            android:id="@+id/radioButtonOption2"
            android:layout_width="wrap_content"
            android:textColor="@color/textSecondary"
            android:layout_height="wrap_content"
            android:text="@string/option2" />

        <RadioButton
            android:id="@+id/radioButtonOption3"
            android:textColor="@color/textSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option3" />
    </RadioGroup>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmButtonMainActivity"
        android:textColor="@color/textPrimary"

        />
       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_gravity="bottom"
           android:gravity="right|bottom"
           tools:ignore="RtlHardcoded">
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/logoutButton"
               android:textColor="@color/textPrimary"
               android:id="@+id/logoutButton"
               />
       </LinearLayout>

</LinearLayout>