<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/primaryColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExercisesActivity"
    tools:ignore="VisualLintBounds">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@color/textPrimary"
        android:text="@string/check_every_excercise_you_completed"
        />

    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="400dp" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textPrimary"
        android:id="@+id/check"
        android:text="@string/all_done"
        />

    <Button
        android:textColor="@color/textPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/closeApp"
        android:text="@string/close_app"
        />
</LinearLayout>