<!-- res/layout/activity_login.xml -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp">

    <ImageView
        android:id="@+id/loginScreenLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/loginActivityImageDescription"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/holder"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/holder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/loginScreenLogo">
        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textSecondary"
            android:hint="@string/loginActivityEditTextUsernameHint"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textSecondary"
            android:hint="@string/loginActivityEditTextPasswordHint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textSecondary"
            android:textColor="@color/textPrimary"
            android:layout_marginTop="16dp"
            android:text="@string/loginActivityButtonText" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
